--- a/src/experiment/abstract.argos.in
+++ b/src/experiment/abstract.argos.in
@@ -18,7 +18,6 @@
         <pipuck_differential_drive implementation="default" />
         <debug implementation="default">
           <interface id="loop_functions" />
-          <interface id="draw" />
         </debug>
         <wifi implementation="default" />
       </actuators>
@@ -37,8 +36,15 @@
   <!-- * Loop functions * -->
   <!-- ****************** -->
   <loop_functions library="@CMAKE_BINARY_DIR@/loop_functions/libdta_abstract_loop_functions"
-                  label="dta_abstract_loop_functions"
-                  layout="25,25" />
+                  label="dta_abstract_loop_functions">
+      <grid layout="25,25"/>
+      <robots>
+         <pipuck id="pipuck0" controller="pipuck" can_send_to="pipuck1,pipuck2,pipuck3" />
+         <pipuck id="pipuck1" controller="pipuck" can_send_to="pipuck0" />
+         <pipuck id="pipuck2" controller="pipuck" can_send_to="pipuck1,pipuck3" />
+         <pipuck id="pipuck3" controller="pipuck" can_send_to="pipuck0,pipuck2" />
+      </robots>
+  </loop_functions>
 
   <!-- *********************** -->
   <!-- * Arena configuration * -->
@@ -59,16 +65,6 @@
     <box id="west" size="2.975,0.025,0.05" movable="false">
       <body position="1.4875,2.9875,0"  orientation="0,0,0" />
     </box>
-    <!-- distribute robots -->
-    <distribute>
-      <position method="uniform" min="0.0,0.0,0" max="3,3,0" />
-      <orientation method="uniform" min="0,0,0" max="360,0,0" />
-      <entity quantity="20" max_trials="50">
-        <pipuck id="pipuck">
-          <controller config="pipuck"/>
-        </pipuck>
-      </entity>
-    </distribute>
   </arena>
 
   <!-- ******************* -->
