--- a/src/experiment/abstract.argos.in
+++ b/src/experiment/abstract.argos.in
@@ -24,7 +24,7 @@
       <sensors>
         <pipuck_ground implementation="default" show_rays="false" />
         <pipuck_differential_drive implementation="default" />
-        <pipuck_rangefinders implementation="default" show_rays="false" />
+        <pipuck_rangefinders implementation="default" show_rays="true" />
         <wifi implementation="default" show_rays="false" />
       </sensors>
       <params script="@CMAKE_BINARY_DIR@/experiment/pipuck.lua" />
@@ -53,16 +53,16 @@
     <!-- update the floor using the loop functions -->
     <floor id="floor" source="loop_functions" pixels_per_meter="100" />
     <!-- add the arena walls -->
-    <box id="north" size="0.025,2.975,0.05" movable="false">
+    <box id="north" size="0.025,2.975,0.075" movable="false">
       <body position="2.9875,1.5125,0"  orientation="0,0,0" />
     </box>
-    <box id="east" size="2.975,0.025,0.05" movable="false">
+    <box id="east" size="2.975,0.025,0.075" movable="false">
       <body position="1.5125,0.0125,0"  orientation="0,0,0" />
     </box>
-    <box id="south" size="0.025,2.975,0.05" movable="false">
+    <box id="south" size="0.025,2.975,0.075" movable="false">
       <body position="0.0125,1.4875,0"  orientation="0,0,0" />
     </box>
-    <box id="west" size="2.975,0.025,0.05" movable="false">
+    <box id="west" size="2.975,0.025,0.075" movable="false">
       <body position="1.4875,2.9875,0"  orientation="0,0,0" />
     </box>
   </arena>
