--- a/src/experiment/abstract.argos.in
+++ b/src/experiment/abstract.argos.in
@@ -1,17 +1,13 @@
 <?xml version="1.0" ?>
 <argos-configuration>
 
-  <!-- ************************* -->
-  <!-- * General configuration * -->
-  <!-- ************************* -->
+  <!-- General configuration -->
   <framework>
     <system threads="0" />
     <experiment length="0" ticks_per_second="5" random_seed="0" />
   </framework>
   
-  <!-- *************** -->
-  <!-- * Controllers * -->
-  <!-- *************** -->
+  <!-- Controllers -->
   <controllers>
     <lua_controller id="pipuck">
       <actuators>
@@ -32,17 +28,31 @@
 
   </controllers>
 
-  <!-- ****************** -->
-  <!-- * Loop functions * -->
-  <!-- ****************** -->
+  <!-- Loop functions
+     parameters
+         * foraging_delay_coeff: the delay between the spawning of two blocks follows a possion 
+           distribution whose mean is calculated as:
+              foraging_mean_delay = foraging_delay_coeff * (total_robots - robots_foraging)
+         * foraging_duration_mean: the amount of time that a robot spends foraging follows a 
+              possion distribution whose mean is: foraging_duration_mean
+         * construction_limit: is the maximum number of blocks that can be attached to a structure
+              every second (the limit is imposed on how many blocks have been placed in the last second).
+  -->
   <loop_functions library="@CMAKE_BINARY_DIR@/loop_functions/libdta_abstract_loop_functions"
-                  label="dta_abstract_loop_functions">
-      <grid layout="25,25"/>
+                  label="dta_abstract_loop_functions"
+                  output="data.csv">
+      <parameters grid_layout="25,25" foraging_delay_coeff="1" foraging_duration_mean="100" construction_limit="5" />
       <robots>
          <pipuck id="pipuck0" controller="pipuck" can_send_to="pipuck1,pipuck2,pipuck3" />
          <pipuck id="pipuck1" controller="pipuck" can_send_to="pipuck0" />
          <pipuck id="pipuck2" controller="pipuck" can_send_to="pipuck1,pipuck3" />
-         <pipuck id="pipuck3" controller="pipuck" can_send_to="pipuck0,pipuck2" />
+         <pipuck id="pipuck3" controller="pipuck" can_send_to="pipuck1,pipuck2" />
+         <pipuck id="pipuck4" controller="pipuck" can_send_to="pipuck3,pipuck4" />
+         <pipuck id="pipuck5" controller="pipuck" can_send_to="pipuck1,pipuck6" />
+         <pipuck id="pipuck6" controller="pipuck" can_send_to="pipuck7,pipuck11" />
+         <pipuck id="pipuck7" controller="pipuck" can_send_to="pipuck6,pipuck10" />
+         <pipuck id="pipuck8" controller="pipuck" can_send_to="pipuck5,pipuck9" />
+         <pipuck id="pipuck9" controller="pipuck" can_send_to="pipuck4,pipuck8" />
       </robots>
   </loop_functions>
 
