--- a/src/experiment/abstract.argos.in
+++ b/src/experiment/abstract.argos.in
@@ -41,19 +41,19 @@
   <loop_functions library="@CMAKE_BINARY_DIR@/loop_functions/libdta_abstract_loop_functions"
                   label="dta_abstract_loop_functions"
                   output="data.csv">
-      <parameters grid_layout="25,25" foraging_delay_coeff="1" foraging_duration_mean="100" construction_limit="5" />
-      <robots>
-         <pipuck id="pipuck0" controller="pipuck" can_send_to="pipuck1,pipuck7,pipuck3" />
-         <pipuck id="pipuck1" controller="pipuck" can_send_to="pipuck0,pipuck5,pipuck9" />
-         <pipuck id="pipuck2" controller="pipuck" can_send_to="pipuck1,pipuck3,pipuck5" />
-         <pipuck id="pipuck3" controller="pipuck" can_send_to="pipuck1,pipuck8,pipuck8" />
-         <pipuck id="pipuck4" controller="pipuck" can_send_to="pipuck3,pipuck4,pipuck0" />
-         <pipuck id="pipuck5" controller="pipuck" can_send_to="pipuck1,pipuck6,pipuck4" />
-         <pipuck id="pipuck6" controller="pipuck" can_send_to="pipuck7,pipuck9,pipuck6" />
-         <pipuck id="pipuck7" controller="pipuck" can_send_to="pipuck6,pipuck8,pipuck0" />
-         <pipuck id="pipuck8" controller="pipuck" can_send_to="pipuck5,pipuck9,pipuck1" />
-         <pipuck id="pipuck9" controller="pipuck" can_send_to="pipuck4,pipuck8,pipuck3" />
-      </robots>
+    <parameters grid_layout="25,25" foraging_delay_coeff="1" foraging_duration_mean="100" construction_limit="5" />
+    <robots>
+      <pipuck id="pipuck0" controller="pipuck" can_send_to="pipuck1,pipuck7,pipuck3" />
+      <pipuck id="pipuck1" controller="pipuck" can_send_to="pipuck0,pipuck5,pipuck9" />
+      <pipuck id="pipuck2" controller="pipuck" can_send_to="pipuck1,pipuck3,pipuck5" />
+      <pipuck id="pipuck3" controller="pipuck" can_send_to="pipuck1,pipuck8,pipuck8" />
+      <pipuck id="pipuck4" controller="pipuck" can_send_to="pipuck3,pipuck4,pipuck0" />
+      <pipuck id="pipuck5" controller="pipuck" can_send_to="pipuck1,pipuck6,pipuck4" />
+      <pipuck id="pipuck6" controller="pipuck" can_send_to="pipuck7,pipuck9,pipuck6" />
+      <pipuck id="pipuck7" controller="pipuck" can_send_to="pipuck6,pipuck8,pipuck0" />
+      <pipuck id="pipuck8" controller="pipuck" can_send_to="pipuck5,pipuck9,pipuck1" />
+      <pipuck id="pipuck9" controller="pipuck" can_send_to="pipuck4,pipuck8,pipuck3" />
+    </robots>
   </loop_functions>
 
   <!-- *********************** -->
@@ -81,7 +81,7 @@
   <!-- * Physics engines * -->
   <!-- ******************* -->
   <physics_engines>
-    <dynamics3d id="dyn3d" iterations="25" default_friction="1">
+    <dynamics3d id="dyn3d" iterations="10" default_friction="1">
       <gravity g="9.8" />
       <floor friction="1" />
     </dynamics3d>
@@ -101,7 +101,7 @@
   <!-- ****************** -->
 
   <visualization>
-    <qt-opengl lua_editor="false">
+    <qt-opengl lua_editor="false" show_boundary="false">
       <camera>
         <placement idx="0" position="1.5,1.5,5" look_at="1.5,1.5,0.125" up="1,0,0" lens_focal_length="40" />
         <placement idx="1" position=" 1.5,-4.5,2" look_at="1.5,1.5,0.5" lens_focal_length="57" />
