Added loop functions and configuration dedicated to generating visuals.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -55,3 +55,7 @@ configure_file(
   ${CMAKE_SOURCE_DIR}/experiment/block.lua
   ${CMAKE_BINARY_DIR}/experiment/block.lua
   COPYONLY)
+
+configure_file(
+  ${CMAKE_SOURCE_DIR}/experiment/visualization.argos.in
+  ${CMAKE_BINARY_DIR}/experiment/visualization.argos)
