--- a/src/loop_functions/CMakeLists.txt
+++ b/src/loop_functions/CMakeLists.txt
@@ -6,9 +6,15 @@ add_library(dta_srocs_loop_functions MODULE
    dta_srocs_loop_functions.h
    dta_srocs_loop_functions.cpp)
 
+add_library(dta_visualization_loop_functions MODULE
+   dta_visualization_loop_functions.h
+   dta_visualization_loop_functions.cpp)
+
 target_link_libraries(dta_abstract_loop_functions
    ${SROCS_ENTITIES_LIBRARY})
 
 target_link_libraries(dta_srocs_loop_functions
    ${SROCS_ENTITIES_LIBRARY})
 
+target_link_libraries(dta_visualization_loop_functions
+   ${SROCS_ENTITIES_LIBRARY})
