Update to robot code and loop functions. 1. Added a buffer called set_estimate for communicating the current estimate from a robot controller and the loop functions. 2. Changed buffer name loop_functions to set_task. 3. Reduced the obstacle distance threshold.

--- a/src/experiment/abstract.argos.in
+++ b/src/experiment/abstract.argos.in
@@ -13,7 +13,8 @@
       <actuators>
         <pipuck_differential_drive implementation="default" />
         <debug implementation="default">
-          <interface id="loop_functions" />
+          <interface id="set_task" />
+          <interface id="set_estimate" />
         </debug>
         <wifi implementation="dta_abstract" />
       </actuators>
