--- a/src/loop_functions/CMakeLists.txt
+++ b/src/loop_functions/CMakeLists.txt
@@ -1,12 +1,19 @@
 add_library(dta_abstract_loop_functions MODULE
    dta_abstract_loop_functions.h
    dta_abstract_loop_functions.cpp)
+   
+add_library(dta_abstract_loop_functions_ilja MODULE
+   dta_abstract_loop_functions_ilja.h
+   dta_abstract_loop_functions_ilja.cpp)
 
 add_library(dta_srocs_loop_functions MODULE
    dta_srocs_loop_functions.h
    dta_srocs_loop_functions.cpp)
 
 target_link_libraries(dta_abstract_loop_functions
+   ${SROCS_ENTITIES_LIBRARY})
+   
+target_link_libraries(dta_abstract_loop_functions_ilja
    ${SROCS_ENTITIES_LIBRARY})
 
 target_link_libraries(dta_srocs_loop_functions
