--- a/src/experiment/abstract_ilja.argos.in
+++ b/src/experiment/abstract_ilja.argos.in
@@ -4,57 +4,8 @@
   <!-- General configuration -->
   <framework>
     <system threads="0" />
-    <experiment length="0" ticks_per_second="5" random_seed="0" />
+    <experiment length="10000" ticks_per_second="5" random_seed="1" />
   </framework>
-  
-  <!-- Controllers -->
-  <controllers>
-    <lua_controller id="pipuck">
-      <actuators>
-        <pipuck_differential_drive implementation="default" />
-        <debug implementation="default">
-          <interface id="loop_functions" />
-        </debug>
-        <wifi implementation="dta_abstract" />
-      </actuators>
-      <sensors>
-        <pipuck_ground implementation="default" show_rays="false" />
-        <pipuck_differential_drive implementation="default" />
-        <pipuck_rangefinders implementation="default" show_rays="true" />
-        <wifi implementation="default" show_rays="true" />
-      </sensors>
-      <params script="@CMAKE_BINARY_DIR@/experiment/pipuck_ilja.lua" />
-    </lua_controller>
-
-  </controllers>
-
-  <!-- Loop functions
-     parameters
-         * foraging_delay_coeff: the delay between the spawning of two blocks follows a possion 
-           distribution whose mean is calculated as:
-              foraging_mean_delay = foraging_delay_coeff * (total_robots - robots_foraging)
-         * foraging_duration_mean: the amount of time that a robot spends foraging follows a 
-              possion distribution whose mean is: foraging_duration_mean
-         * construction_limit: is the maximum number of blocks that can be attached to a structure
-              every second (the limit is imposed on how many blocks have been placed in the last second).
-  -->
-  <loop_functions library="@CMAKE_BINARY_DIR@/loop_functions/libdta_abstract_loop_functions"
-                  label="dta_abstract_loop_functions"
-                  output="data.csv">
-    <parameters grid_layout="25,25" foraging_delay_coeff="1" foraging_duration_mean="100" construction_limit="5" />
-    <robots>
-      <pipuck id="pipuck0" controller="pipuck" can_send_to="pipuck1,pipuck7,pipuck3" />
-      <pipuck id="pipuck1" controller="pipuck" can_send_to="pipuck0,pipuck5,pipuck9" />
-      <pipuck id="pipuck2" controller="pipuck" can_send_to="pipuck1,pipuck3,pipuck5" />
-      <pipuck id="pipuck3" controller="pipuck" can_send_to="pipuck1,pipuck8,pipuck8" />
-      <pipuck id="pipuck4" controller="pipuck" can_send_to="pipuck3,pipuck8,pipuck0" />
-      <pipuck id="pipuck5" controller="pipuck" can_send_to="pipuck1,pipuck6,pipuck4" />
-      <pipuck id="pipuck6" controller="pipuck" can_send_to="pipuck7,pipuck9,pipuck4" />
-      <pipuck id="pipuck7" controller="pipuck" can_send_to="pipuck6,pipuck8,pipuck0" />
-      <pipuck id="pipuck8" controller="pipuck" can_send_to="pipuck5,pipuck9,pipuck1" />
-      <pipuck id="pipuck9" controller="pipuck" can_send_to="pipuck4,pipuck8,pipuck3" />
-    </robots>
-  </loop_functions>
 
   <!-- *********************** -->
   <!-- * Arena configuration * -->
@@ -98,7 +49,7 @@
 
   <!-- ****************** -->
   <!-- * Visualization  * -->
-  <!-- ****************** -->
+  <!-- ******************
 
   <visualization>
     <qt-opengl lua_editor="false" show_boundary="false">
@@ -115,6 +66,108 @@
       </camera>
     </qt-opengl>
   </visualization>
+ -->
+  
+  <!-- Controllers -->
+  <controllers>
+    <lua_controller id="pipuck">
+      <actuators>
+        <pipuck_differential_drive implementation="default" />
+        <debug implementation="default">
+          <interface id="set_task" />
+          <interface id="set_estimate" />
+          <interface id="set_gradient" />
+          <interface id="set_state" />
+        </debug>
+        <wifi implementation="dta_abstract" />
+      </actuators>
+      <sensors>
+        <pipuck_ground implementation="default" show_rays="false" />
+        <pipuck_differential_drive implementation="default" />
+        <pipuck_rangefinders implementation="default" show_rays="true" />
+        <wifi implementation="default" show_rays="true" />
+      </sensors>
+      <params script="/home/irausch/git_repos/argos3-dta/build/experiment/pipuck_ilja.lua" />
+    </lua_controller>
 
+  </controllers>
+
+  <!-- Loop functions
+     parameters
+         * foraging_delay_coeff: the delay between the spawning of two blocks follows a possion 
+           distribution whose mean is calculated as:
+              foraging_mean_delay = foraging_delay_coeff * (total_robots - robots_foraging)
+         * foraging_duration_mean: the amount of time that a robot spends foraging follows a 
+              possion distribution whose mean is: foraging_duration_mean
+         * construction_limit: is the maximum number of blocks that can be attached to a structure
+              every second (the limit is imposed on how many blocks have been placed in the last second).
+  -->
+  <loop_functions library="/home/irausch/git_repos/argos3-dta/build/loop_functions/libdta_abstract_loop_functions_ilja"
+                  label="dta_abstract_loop_functions_ilja"
+                  output="data.csv">
+    <parameters grid_layout="25,25" foraging_delay_coeff="1" foraging_duration_mean="100" construction_limit="1000" />
+    <robots>
+      <pipuck id="pipuck0" controller="pipuck" can_send_to="pipuck1,pipuck7,pipuck3" />
+      <pipuck id="pipuck1" controller="pipuck" can_send_to="pipuck10,pipuck5,pipuck9" />
+      <pipuck id="pipuck2" controller="pipuck" can_send_to="pipuck1,pipuck3,pipuck5" />
+      <pipuck id="pipuck3" controller="pipuck" can_send_to="pipuck1,pipuck8,pipuck18" />
+      <pipuck id="pipuck4" controller="pipuck" can_send_to="pipuck3,pipuck8,pipuck0" />
+      <pipuck id="pipuck5" controller="pipuck" can_send_to="pipuck1,pipuck6,pipuck4" />
+      <pipuck id="pipuck6" controller="pipuck" can_send_to="pipuck7,pipuck9,pipuck4" />
+      <pipuck id="pipuck7" controller="pipuck" can_send_to="pipuck16,pipuck8,pipuck0" />
+      <pipuck id="pipuck8" controller="pipuck" can_send_to="pipuck5,pipuck9,pipuck1" />
+      <pipuck id="pipuck9" controller="pipuck" can_send_to="pipuck4,pipuck8,pipuck3" />
+      <pipuck id="pipuck10" controller="pipuck" can_send_to="pipuck11,pipuck17,pipuck13" />
+      <pipuck id="pipuck11" controller="pipuck" can_send_to="pipuck10,pipuck15,pipuck19" />
+      <pipuck id="pipuck12" controller="pipuck" can_send_to="pipuck11,pipuck13,pipuck15" />
+      <pipuck id="pipuck13" controller="pipuck" can_send_to="pipuck11,pipuck18,pipuck8" />
+      <pipuck id="pipuck14" controller="pipuck" can_send_to="pipuck13,pipuck8,pipuck0" />
+      <pipuck id="pipuck15" controller="pipuck" can_send_to="pipuck1,pipuck16,pipuck4" />
+      <pipuck id="pipuck16" controller="pipuck" can_send_to="pipuck17,pipuck19,pipuck14" />
+      <pipuck id="pipuck17" controller="pipuck" can_send_to="pipuck16,pipuck8,pipuck10" />
+      <pipuck id="pipuck18" controller="pipuck" can_send_to="pipuck15,pipuck19,pipuck1" />
+      <pipuck id="pipuck19" controller="pipuck" can_send_to="pipuck4,pipuck18,pipuck3" />
+      <pipuck id="pipuck20" controller="pipuck" can_send_to="pipuck11,pipuck17,pipuck13" />
+      <pipuck id="pipuck21" controller="pipuck" can_send_to="pipuck10,pipuck15,pipuck19" />
+      <pipuck id="pipuck22" controller="pipuck" can_send_to="pipuck11,pipuck13,pipuck15" />
+      <pipuck id="pipuck23" controller="pipuck" can_send_to="pipuck11,pipuck18,pipuck8" />
+      <pipuck id="pipuck22" controller="pipuck" can_send_to="pipuck13,pipuck8,pipuck0" />
+      <pipuck id="pipuck25" controller="pipuck" can_send_to="pipuck1,pipuck16,pipuck4" />
+      <pipuck id="pipuck26" controller="pipuck" can_send_to="pipuck17,pipuck19,pipuck14" />
+      <pipuck id="pipuck27" controller="pipuck" can_send_to="pipuck16,pipuck8,pipuck10" />
+      <pipuck id="pipuck28" controller="pipuck" can_send_to="pipuck15,pipuck19,pipuck1" />
+      <pipuck id="pipuck29" controller="pipuck" can_send_to="pipuck4,pipuck18,pipuck3" />
+      <pipuck id="pipuck30" controller="pipuck" can_send_to="pipuck11,pipuck17,pipuck13" />
+      <pipuck id="pipuck31" controller="pipuck" can_send_to="pipuck10,pipuck15,pipuck19" />
+      <pipuck id="pipuck32" controller="pipuck" can_send_to="pipuck11,pipuck13,pipuck15" />
+      <pipuck id="pipuck33" controller="pipuck" can_send_to="pipuck11,pipuck18,pipuck8" />
+      <pipuck id="pipuck34" controller="pipuck" can_send_to="pipuck13,pipuck8,pipuck0" />
+      <pipuck id="pipuck35" controller="pipuck" can_send_to="pipuck1,pipuck16,pipuck4" />
+      <pipuck id="pipuck36" controller="pipuck" can_send_to="pipuck17,pipuck19,pipuck14" />
+      <pipuck id="pipuck37" controller="pipuck" can_send_to="pipuck16,pipuck8,pipuck10" />
+      <pipuck id="pipuck38" controller="pipuck" can_send_to="pipuck15,pipuck19,pipuck1" />
+      <pipuck id="pipuck39" controller="pipuck" can_send_to="pipuck4,pipuck18,pipuck3" />
+      <pipuck id="pipuck40" controller="pipuck" can_send_to="pipuck11,pipuck17,pipuck13" />
+      <pipuck id="pipuck41" controller="pipuck" can_send_to="pipuck10,pipuck15,pipuck19" />
+      <pipuck id="pipuck42" controller="pipuck" can_send_to="pipuck11,pipuck13,pipuck15" />
+      <pipuck id="pipuck43" controller="pipuck" can_send_to="pipuck11,pipuck18,pipuck8" />
+      <pipuck id="pipuck44" controller="pipuck" can_send_to="pipuck13,pipuck8,pipuck0" />
+      <pipuck id="pipuck45" controller="pipuck" can_send_to="pipuck1,pipuck16,pipuck4" />
+      <pipuck id="pipuck46" controller="pipuck" can_send_to="pipuck17,pipuck19,pipuck14" />
+      <pipuck id="pipuck47" controller="pipuck" can_send_to="pipuck16,pipuck8,pipuck10" />
+      <pipuck id="pipuck48" controller="pipuck" can_send_to="pipuck15,pipuck19,pipuck1" />
+      <pipuck id="pipuck49" controller="pipuck" can_send_to="pipuck4,pipuck18,pipuck3" />
+      <pipuck id="pipuck50" controller="pipuck" can_send_to="pipuck11,pipuck17,pipuck13" />
+      <pipuck id="pipuck51" controller="pipuck" can_send_to="pipuck10,pipuck15,pipuck19" />
+      <pipuck id="pipuck52" controller="pipuck" can_send_to="pipuck11,pipuck13,pipuck15" />
+      <pipuck id="pipuck53" controller="pipuck" can_send_to="pipuck11,pipuck18,pipuck8" />
+      <pipuck id="pipuck54" controller="pipuck" can_send_to="pipuck13,pipuck8,pipuck0" />
+      <pipuck id="pipuck55" controller="pipuck" can_send_to="pipuck1,pipuck16,pipuck4" />
+      <pipuck id="pipuck56" controller="pipuck" can_send_to="pipuck17,pipuck19,pipuck14" />
+      <pipuck id="pipuck57" controller="pipuck" can_send_to="pipuck16,pipuck8,pipuck10" />
+      <pipuck id="pipuck58" controller="pipuck" can_send_to="pipuck15,pipuck19,pipuck1" />
+      <pipuck id="pipuck59" controller="pipuck" can_send_to="pipuck4,pipuck18,pipuck3" />
+    </robots>
+  </loop_functions>
 
 </argos-configuration>
