Finalised code for simulations with wifi proximity networks.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
-/build*/
-/localfiles*/
+# /build*/
+# # /localfiles*/
 /argos_files*/
-/results*/
-/shell_scripts*/
-/auxiliary/local_files*/
+# /results*/
+# /shell_scripts*/
+# /auxiliary/local_files*/
+# /data.csv
+
+/*
+!/src/
+!/src/*/
+!/auxiliary/
+!/auxiliary/*/
+/auxiliary/local_files/
+!/README.md
+!/.gitignore
+!/.git*/
