Finalised code for simulations with wifi proximity networks.

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,11 @@
 # /auxiliary/local_files*/
 # /data.csv
 
-/*
+/**
 !/src/
-!/src/*/
+!/src/**
 !/auxiliary/
-!/auxiliary/*/
+!/auxiliary/**
 /auxiliary/local_files/
 !/README.md
 !/.gitignore
