--- a/src/loop_functions/CMakeLists.txt
+++ b/src/loop_functions/CMakeLists.txt
@@ -1,7 +1,7 @@
-add_library(dta_abstract_loop_functions MODULE
-   dta_abstract_loop_functions.h
-   dta_abstract_loop_functions.cpp)
+add_library(dta_loop_functions MODULE
+   dta_loop_functions.h
+   dta_loop_functions.cpp)
 
-target_link_libraries(dta_abstract_loop_functions
+target_link_libraries(dta_loop_functions
    ${SROCS_ENTITIES_LIBRARY})
 
