--- a/src/experiment/large.argos.in
+++ b/src/experiment/large.argos.in
@@ -4,42 +4,42 @@
   <!-- General configuration -->
   <framework>
     <system threads="0" />
-    <experiment length="1000" ticks_per_second="5" random_seed="1" />
+    <experiment length="1000" ticks_per_second="5" random_seed="0" />
   </framework>
 
   <!-- Arena configuration -->
-  <arena size="4.05,4.05,1" center="2.025,2.025,0" >
+  <arena size="8.05,8.05,1" center="4.025,4.025,0" >
     <floor id="floor" source="loop_functions" pixels_per_meter="100" />
-    <box id="north" size="4.025,0.025,0.075" movable="false" >
-      <body position="2.0375,4.0375,0" orientation="0,0,0" />
+    <box id="north" size="8.025,0.025,0.075" movable="false" >
+      <body position="4.0375,8.0375,0" orientation="0,0,0" />
     </box>
-    <box id="east" size="0.025,4.025,0.075" movable="false" >
-      <body position="4.0375,2.0125,0" orientation="0,0,0" />
+    <box id="east" size="0.025,8.025,0.075" movable="false" >
+      <body position="8.0375,4.0125,0" orientation="0,0,0" />
     </box>
-    <box id="south" size="4.025,0.025,0.075" movable="false" >
-      <body position="2.0125,0.0125,0" orientation="0,0,0" />
+    <box id="south" size="8.025,0.025,0.075" movable="false" >
+      <body position="4.0125,0.0125,0" orientation="0,0,0" />
     </box>
-    <box id="west" size="0.025,4.025,0.075" movable="false" >
-      <body position="0.0125,2.0375,0" orientation="0,0,0" />
+    <box id="west" size="0.025,8.025,0.075" movable="false" >
+      <body position="0.0125,4.0375,0" orientation="0,0,0" />
     </box>
   </arena>
-
+  
   <!-- Visualization -->
   <visualization>
     <qt-opengl lua_editor="false" show_boundary="false">
       <camera>
-        <placement idx="0" position="2.025,2.025,7" look_at="2.025,2.025,0.5" lens_focal_length="44" up="1,0,0" />
-        <placement idx="1" position="2.025,-6.075,3" look_at="2.025,2.025,0.5" lens_focal_length="57" />
-        <placement idx="2" position="11.34,-7.29,7" look_at="2.025,2.025,0.5" lens_focal_length="86" />
-        <placement idx="3" position="10.125,2.025,3" look_at="2.025,2.025,0.5" lens_focal_length="57" />
-        <placement idx="4" position="11.34,11.34,7" look_at="2.025,2.025,0.5" lens_focal_length="86" />
-        <placement idx="5" position="2.025,10.125,3" look_at="2.025,2.025,0.5" lens_focal_length="57" />
-        <placement idx="6" position="-7.29,11.34,7" look_at="2.025,2.025,0.5" lens_focal_length="86" />
-        <placement idx="7" position="-6.075,2.025,3" look_at="2.025,2.025,0.5" lens_focal_length="57" />
-        <placement idx="8" position="-7.29,-7.29,7" look_at="2.025,2.025,0.5" lens_focal_length="86" />
-        <placement idx="9" position="2.025,2.025,7" look_at="2.025,2.025,0.5" lens_focal_length="44" up="1,0,0" />
-        <placement idx="10" position="2.025,2.025,7" look_at="2.025,2.025,0.5" lens_focal_length="44" up="1,0,0" />
-        <placement idx="11" position="2.025,2.025,7" look_at="2.025,2.025,0.5" lens_focal_length="44" up="1,0,0" />
+        <placement idx="0" position="4.025,4.025,14" look_at="4.025,4.025,0.5" lens_focal_length="45" up="1,0,0" />
+        <placement idx="1" position="4.025,-12.075,6" look_at="4.025,4.025,0.5" lens_focal_length="59" />
+        <placement idx="2" position="22.54,-14.49,14" look_at="4.025,4.025,0.5" lens_focal_length="93" />
+        <placement idx="3" position="20.125,4.025,6" look_at="4.025,4.025,0.5" lens_focal_length="59" />
+        <placement idx="4" position="22.54,22.54,14" look_at="4.025,4.025,0.5" lens_focal_length="93" />
+        <placement idx="5" position="4.025,20.125,6" look_at="4.025,4.025,0.5" lens_focal_length="59" />
+        <placement idx="6" position="-14.49,22.54,14" look_at="4.025,4.025,0.5" lens_focal_length="93" />
+        <placement idx="7" position="-12.075,4.025,6" look_at="4.025,4.025,0.5" lens_focal_length="59" />
+        <placement idx="8" position="-14.49,-14.49,14" look_at="4.025,4.025,0.5" lens_focal_length="93" />
+        <placement idx="9" position="4.025,4.025,14" look_at="4.025,4.025,0.5" lens_focal_length="45" up="1,0,0" />
+        <placement idx="10" position="4.025,4.025,14" look_at="4.025,4.025,0.5" lens_focal_length="45" up="1,0,0" />
+        <placement idx="11" position="4.025,4.025,14" look_at="4.025,4.025,0.5" lens_focal_length="45" up="1,0,0" />
       </camera>
     </qt-opengl>
   </visualization>
@@ -54,7 +54,7 @@
 
   <!-- Media -->
   <media>
-    <radio id="wifi" index="grid" grid_size="20,20,1" />
+    <radio id="wifi" index="grid" grid_size="40,40,1" />
   </media>
 
   <!-- Controllers -->
@@ -68,8 +68,7 @@
           <interface id="set_deviation" />
           <interface id="set_degree" />
         </debug>
-        <!-- set the range of the wifi such that communication is effectively disabled -->
-        <wifi implementation="dta_proximity" range="0.005"/>
+        <wifi implementation="dta_abstract"/>
       </actuators>
       <sensors>
         <pipuck_ground implementation="default" show_rays="false" />
@@ -93,13 +92,14 @@
          * construction_limit: is the maximum number of blocks that can be attached to a structure
               every second (the limit is imposed on how many blocks have been placed in the last second).
   -->
-  <loop_functions library="@CMAKE_BINARY_DIR@/loop_functions/libdta_abstract_loop_functions"
-                  label="dta_abstract_loop_functions">
-    <parameters grid_layout="50,50"
+  <loop_functions library="@CMAKE_BINARY_DIR@/loop_functions/libdta_loop_functions"
+                  label="dta_loop_functions"
+                  output="data.tsv">
+    <parameters grid_layout="100,100"
                 shading_distribution="uniform"
                 mean_foraging_duration_initial="50"
                 mean_foraging_duration_gradient="0.05"
-                construction_limit="80"/>
+                construction_limit="320"/>
     <robots />
   </loop_functions>
 
