--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,1 @@
-# /build*/
-# # /localfiles*/
-/argos_files*/
-# /results*/
-# /shell_scripts*/
-# /auxiliary/local_files*/
-# /data.csv
-
-/**
-!/src/
-!/src/**
-!/auxiliary/
-!/auxiliary/**
-/auxiliary/local_files/
-!/README.md
-!/.gitignore
-!/.git*/
+/build*/
